Created a controller dedicates to managing routes related to Properties such as viewing all properties.

--- a/RealEstateScenario/Presentation/Presentation.csproj
+++ b/RealEstateScenario/Presentation/Presentation.csproj
@@ -16,7 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Properties\" />
     <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
